--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		
 		<div class="content">
 			
-			<h1>Lorem Ipsum</h1>
+			<h1>AUSPHIN </h1>
 
+			<h2>GROUP OF COMPANIES</h2>
 
-
-			<h2>Lorem Ipsum Dolor</h2>
+			<hr>
 
 			<div class="company-icons">
 				<div class="icon">
