--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
 	<div class="background">
 		
 		<div class="content">
-			
-			<h1>AUSPHIN </h1>
+			<div class="container">
+				<h1>AUSPHIN </h1>
 
-			<h2>GROUP OF COMPANIES</h2>
+				<h2>GROUP OF COMPANIES</h2>
 
-			<hr>
+				<hr>
 
-			<div class="company-icons">
-				<div class="icon">
-					<a href="http://ausphininternational.ph/" target="blank_"><img src="assets/images/AII-Logo.png"></a>
-				</div>
-				<div class="icon">
-					<a href="http://www.auskills.com" target="blank_"><img src="assets/images/Auskills-Logo.png"></a>
-				</div>
-				<div class="icon">
-					<a href="http://ausphin.com.au/" target="blank_"><img src="assets/images/Ausphin-Logo.png"></a>
-				</div>
-				<div class="icon">
-					<a href="http://www.martinplacesocial.com.ph/" target="blank_"><img src="assets/images/MPS-Logo.png"></a>
+				<div class="company-icons">
+					<div class="icon">
+						<a href="http://ausphininternational.ph/" target="blank_"><img src="assets/images/AII-Logo.png"></a>
+					</div>
+					<div class="icon">
+						<a href="http://www.auskills.com" target="blank_"><img src="assets/images/Auskills-Logo.png"></a>
+					</div>
+					<div class="icon">
+						<a href="http://ausphin.com.au/" target="blank_"><img src="assets/images/Ausphin-Logo.png"></a>
+					</div>
+					<div class="icon">
+						<a href="http://www.martinplacesocial.com.ph/" target="blank_"><img src="assets/images/MPS-Logo.png"></a>
+					</div>
 				</div>
 			</div>
 		</div>
