--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
 
-	<title>Lorem Ipsum Dolor</title>
+	<title>Ausphin | Group of Companies</title>
 
 	<link rel="shortcut icon" href="assets/images/favicon.png" />
 
